1999-12-28  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/DPSOperators.h: New operators colorimage
	and alphaimage.
	* Headers/gnustep/gui/NSGraphicsContext.h: Likewise.
	* Source/NSGraphicsContex.m: Add stubs.

	* Source/NSBitmapImageRep.m (-draw): Implement using NSDrawBitmap.
	* Source/NSCachedImageRep.m: Conditional use of PScomposite functions
	for drawing methods (set user default "ImageCompositing" to YES
	for this to work).

Tue Dec 28 15:58:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Initial hack of support for encoding/decoding images - untested.
	* Source/NSBitmapImageRep.m: Code for writing tiffs etc.
	* Source/NSImage.m: Archiving support and tifying.
	* Source/NSImageRep.m: Archiving support and tifying.
	* Source/tiff.m: modifications for compression and for writing.
	* Headers/gnustep/gui/NSBitmapImageRep.h: tidy and support writing.
	* Headers/gnustep/gui/NSImage.h: ditto
	* Headers/gnustep/gui/NSImageRep.h: ditto
	* Headers/gnustep/gui/nsimage-tiff.h: ditto

1999-12-24  David Lazaro  <khelekir@encomix.es>

	* Source/NSMenuView.m ([NSMenuView -trackWithEvent:]): Added hysteresis
	to the item selection code.

Wed Dec 22 12:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSImage.m: When creating an off-screen cache, fill with
	the background color (so having multiple caches for different
	backgrounds will work).
	Set 'NSImageDoesCaching' to 'YES' by default - we do image caching
	as standard now.

Wed Dec 22 10:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: ([-sendEvent:]) reset _lastDragView on exit from
	a view or on completion of dragging operation.  This ensures that if
	you do two drags into the same view, the view gets two draggingEntered
	messages (one for each session).

Wed Dec 22  5:24:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPanel.m: Fixed image display in alert panel.
